--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <a href="https://github.com/HemanthSabbella/PCBDesign" class="text-primary" >Designs[Link]<br /></a>
           <br>
           <hr>
-
+           <img src="img/Chip_design.png" alt="Paris"> 
           <div>
           <div class="subheading mb-3"> Design and Implementation of a Serial to Parallel and Parallel to Serial IC.</div>
           <div>Design and Implementation of an IC that can convert Serial input to Parallel output, Parallel input to Serial output and Parallel input to Parallel output using select line. From Idea to GDS, the whole VLSI flow is implemented using the below tools and platforms.</div>
@@ -239,7 +239,7 @@
           <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/VLSI_Design_Flow.pdf" class="text-primary" >Reports[Link]<br /></a>
           <br>
           <hr>
-            
+           <img src="img/Soc_project.png" alt="Paris"> 
           <div class="subheading mb-3">SoC Security: A logic level methodology to prevent Differential power analysis</div>
           <div> Measuring the power consumption of the every logic transition will reveal the information that is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and the power consumption is shown constant.</div>
           <div>Guide: Dr. Sujay Deb</div>
@@ -247,7 +247,7 @@
           <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf" class="text-primary" >PPT[Link]<br /></a>
           <br>
           <hr>
-
+          <img src="img/Red_ball.png" alt="Paris">
           <div class="subheading mb-3">Red ball detection on Quadcopter</div>
           <div> The project is an implementation of Kalman filter based PID controller on Quadcopter for tracking red ball in triaxial which is based on Python and openCV on Robotic Operating System(ROS).</div>
           <div>Guide: Dr. P. B. Sujit.</div>
@@ -255,7 +255,7 @@
           <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py" class="text-primary" >Code[Link]<br /></a>
           <br>
           <hr>
- 
+          <img src="img/Signal_inpainting.png" alt="Paris">
           <div class="subheading mb-3">Signal inpainting on graphs</div>
           <div> The projects aims to implement  graph variation minimization and regulation algorithms that can recreate missing parts of a signal using on graphical representation of data. </div>
           <div>Guide: Dr. Anubha Gupta.</div>
