--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="css/resume.css" rel="stylesheet">
     <style>
        img {
-         border: 1px solid #ddd;
+         border: 2px;
          border-radius: 2px;
          padding: 3px;
          width: 150px;
