--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Sri Chaitanya College(KKR campus), Vijayawada</h3>
-              <div class="subheading mb-3">MPC(APBSE)</div>
+              <div class="subheading mb-3">12th Standard</div>
               <p>Percentage: 96.6%</p>
             </div>
             <div class="resume-date text-md-right">
@@ -165,7 +165,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Bhashyam Public School,  Tanuku</h3>
-              <div class="subheading mb-3">10th Standard(APBSE)</div>
+              <div class="subheading mb-3">10th Standard</div>
               <p>Percentage: 93%</p>
             </div>
             <div class="resume-date text-md-right">
