--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
           <p> Eagle CAD, Cadence - Virtuoso, Encounter, Synopsys - Design Compiler, Primetime, LTspice, Tina, Matlab, Raspberry Pi 3, FPGA(Basys 2), NI USRP(2920, 2922), NI DAQ(6009), 3D printing and modeling(Prusa i3 and LBD makers) and good laboratory skills..</p>
           <hr>
           <div class="subheading mb-3">Courses</div>
-          <p> Linear Circuits, Analog CMOS, VLSI design flow, Digital Signal Processing, Mixed Signal Design, Embedded Systems, Internet of Things</p>
-        
+          <p> Main-stream: Analog CMOS, VLSI design flow, Digital Signal Processing, Mixed Signal Design, Linear Circuits, Integrated Electronics Embedded Logic Design, System on Chip - Design and Test, Smart sensing in Internet of Things</p>
           </div>
         </div>
       </section>
