--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
           <img src="img/MSD_project.png" alt="Paris">
-          <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter</div>
+          <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter[brainwaves filter]</div>
           <div>Design of transistor level narrow bandpass filter of 4th order to filter out the brain waves in the frequncy range 25 Hz-100 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
           <div> Tools: Cadence - Virtuoso.</div>
