--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
               <div class="subheading mb-3">Neuronics lab, IISc</div>
                <ul>
               <li>Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
-              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC<a href="" class="text-primary"> [Patent submitted]</a>  <a href="" class="text-primary">[Paper submitted]</a> </li>
-              <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects<a href="" class="text-primary"> [Patent submitted]</a>  <a href="" class="text-primary">[Paper in progess]</a></li>
+              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li><!--<a href="" class="text-primary"> [Patent submitted]</a>  <a href="" class="text-primary">[Paper submitted]</a> </li> -->
+              <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects</li><!--<a href="" class="text-primary"> [Patent submitted]</a>  <a href="" class="text-primary">[Paper in progess]</a></li> -->
             </ul> 
             
             </div>
