--- a/index.html
+++ b/index.html
@@ -133,9 +133,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Undergrad Researcher</h3>
               <div class="subheading mb-3">IIITD</div>
-               <ul>
-              <li>Developed Electromagnetic interference(EMI) sensor and experimented in collecting EMI traces of different appliances for smart segregation of appliances in households. This work is done under the guidance of Manoj Gulati, PhD student. </li>
-               </ul> 
+              
+              <p>Developed Electromagnetic interference(EMI) sensor and experimented in collecting EMI traces of different appliances for smart segregation of appliances in households. This work is done under the guidance of Manoj Gulati, PhD student. </p>
             
             </div>
             <div class="resume-date text-md-right">
