--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <p>     &#8594 Content writer - Recent Innovations</p>
           <p>    &#8594 Graphic Designer</p>
           <hr>
-          <div class="subheading mb-3">Community Work at Shanti Sayhog<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/NGO_CommunityWork.jpg" class="text-primary">[c]</a></div>
+          <div class="subheading mb-3">Community Work at Shanti Sahyog<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/NGO_CommunityWork.jpg" class="text-primary">[c]</a></div>
           <p>     &#8594 Volunteered for educating Delhi slum children in Summer-2017.
           <hr>
           <div class="subheading mb-3">Guest lecture, Introduction to Engineering Design course - IIITD</div>
