--- a/index.html
+++ b/index.html
@@ -284,6 +284,12 @@
         <div class="my-auto">
           <h2 class="mb-5">Extracurricular</h2>
           <div>
+         <div class="subheading mb-3">Attainments</div>
+          <p>     &#8594 Participant, MIT hacking medicine, Grand Hack - 2019 hosted by University of California, San Francisco </p>
+          <p>     &#8594 Winner, Hackware - 2019, A Schedier Electric innovation chanllenge</p>
+          <p>     &#8594 Established Dexter's Lab - an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
+          
+          <hr>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/Electoholics.jpg" class="text-primary">[c]</a></div>
           <p>     &#8594 Club  Admin and Coordinator, 2015-16</p>
           <hr>
@@ -305,10 +311,7 @@
           <div class="subheading mb-3">Guest lecture, Introduction to Engineering Design course - IIITD</div>
           <p>     &#8594 Basics of PCB Designing</p>
           <hr>
-          <div class="subheading mb-3">Attainments</div>
-          <p>     &#8594 Established an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
-          <p>     &#8594 1st position in intra IIITD circuit tournament`13</p>
-          <hr>
+         
           <div class="subheading mb-3">Interests and hobbies</div>
           <p>    &#8594 Reading science alert blogs, capturing through lens(an image got published in <a href="https://www.instagram.com/p/BtlRFouA79c/" class="text-primary">natgeotravelerindia</a>),  playing guitar, western dancing and watching captivating TV shows and movies. </p>
           <br>
