--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           <h2 class="mb-5">Extracurricular</h2>
           <div>
          <div class="subheading mb-3">Attainments</div>
-          <p>     &#8594 Participant, MIT hacking medicine, Grand Hack - 2019 hosted by University of California, San Francisco </p>
+          <p>     &#8594 Stand-out applicant and participant, MIT hacking medicine, Grand Hack - 2019 hosted by University of California, San Francisco </p>
           <p>     &#8594 Winner, Hackware - 2019, A Schedier Electric innovation chanllenge</p>
           <p>     &#8594 Established Dexter's Lab - an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
           
