--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
           <div>
          <div class="subheading mb-3">Attainments</div>
           <p>     &#8594 Stand-out applicant and participant, MIT hacking medicine, Grand Hack - 2019 hosted by University of California, San Francisco <a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/MIT%20Hack.pdf" class="text-primary">[Pitch]</a></p></p>
-          <p>     &#8594 Winner, Hackware - 2019, A Schedier Electric innovation challenge<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/hackware.pdf" class="text-primary">[C]</a></p>
+          <p>     &#8594 Winner, Hackware - 2019, A Schneider Electric innovation challenge<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/hackware.pdf" class="text-primary">[C]</a></p>
           <p>     &#8594 Established Dexter's Lab - an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
           
           <hr>
