update on changes

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
               <div class="subheading mb-3">Neuronics lab, IISc</div>
                <ul>
               <li>Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
-              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li><a href="" class="text-primary"> [Provisional patent submitted]</a>  <a href="" class="text-primary">[Paper in review]</a> </li> 
-              <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects</li><<a href="" class="text-primary"> [Complete patent filed:201941043597]</a>  <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
+              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li><a href="" class="text-primary"> [Provisional patent submitted]</a>  <a href="" class="text-primary">[Paper in review, submitted to TCAS]</a> </li> 
+              <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects</li><a href="" class="text-primary"> [Complete patent filed:201941043597]</a>  <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
             </ul> 
             
             </div>
@@ -208,7 +208,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
-          <h2 class="mb-5">Acadamic projects</h2>
+          <h2 class="mb-5">Academic projects</h2>
           <img src="img/MSD_project.png" alt="Paris">
           <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter [brainwaves filter]</div>
           <div>Design of transistor level narrow bandpass filter of 4th order to filter out the brain waves in the frequncy range 25 Hz-100 Hz.  </div>
