update on changes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="subheading mb-3">Neuronics lab, IISc</div>
                <ul>
               <li>Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
-              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li><a href="" class="text-primary"> Note: Provisional patent submitted, </a>  <a href="" class="text-primary">paper in review, submitted to TCAS </a> </li> 
+              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li><a href="" class="text-primary"> Note: Provisional patent submitted. </a>  <a href="" class="text-primary">Paper in review, submitted to TCAS </a> </li> 
               <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects</li><a href="" class="text-primary"> Note: Complete Indian patent filed: 201941043597 </a>  <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
             </ul> 
             
