--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <div class="subheading mb-3">Neuronics lab, IISc</div>
                <ul>
               <li>Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
-              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li><span class="text-primary"> Note: Provisional patent submitted. </span>  <span class="text-primary">Paper in review, submitted to TCAS </span> </li> 
+              <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li>  <span class="text-primary">Paper in review, submitted to TCAS </span> </li> 
               <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects</li><span class="text-primary"> Note: Complete Indian patent filed: 201941043597 </span>  <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
             </ul> 
             
