--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">Neuronics lab, IISc</div>
                <ul>
-              <li>Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
+              <li>Dhvani v1.0: Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
               <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li>  <span class="text-primary">[arXiv preprint arXiv:1911.09371] </span> </li> 
               <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects</li><span class="text-primary"> [Complete Indian patent filed: 201941043597] </span>  <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
             </ul> 
