--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           
           <hr>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/Electoholics.jpg" class="text-primary">[c]</a></div>
-          <p>     &#8594 Club  Admin and Coordinator, 2015-16</p>
+          <p>     &#8594 Co-founder and Coordinator, 2015-16</p>
           <hr>
           <div class="subheading mb-3">Delhi Mini Maker Faire, 2016<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/DMMF.jpg" class="text-primary">[c]</a></div>
           <p>     &#8594 Student Coordinator and Volunteer</p>
