--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
-              <div class="subheading mb-3">Neuronics lab, IISc</div>
+              <div class="subheading mb-3">Neuronics lab, Indian Institute of Science(IISc)</div>
                <ul>
               <li>Dhvani v1.0: Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
               
