--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <hr>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Project Engineer</h3>
+              <h3 class="mb-0">Associate Consultant</h3>
               <div class="subheading mb-3">Wipro, Communications BU</div>
               <ul>
               <li>Analysing Wipro Holmes bots which are Machine Learning based, and identify the test cases in them. Also, configuring the bots according to the usability in T-Mobile, Poland account of Wipro.</li>
