--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
         <div class="my-auto">
           <h2 class="mb-5">Academic projects</h2>
           <img src="img/MSD_project.png" alt="Paris">
-          <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter [brainwaves filter]</div>
-          <div>Design of transistor level narrow bandpass filter of 4th order to filter out the brain waves in the frequncy range 25 Hz-100 Hz.  </div>
+          <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter [Gammawaves filter]</div>
+          <div>Design of transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 30 Hz - 45 Hz with center frequency 40 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
           <div> Tools: Cadence - Virtuoso.</div>
           <a href = "https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf" class="text-primary" >Poster[Link]<br /></a>
