--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
               <h3 class="mb-0">Undergrad Researcher</h3>
               <div class="subheading mb-3">IIITD</div>
               
-              <p>Developed Electromagnetic interference(EMI) sensor and experimented in collecting EMI traces of different appliances for smart segregation of appliances in households. This work is done under the guidance of Manoj Gulati, PhD student. </p>
+              <p>Developed a Electromagnetic interference(EMI) sensor - a non-invasive, wide-band, current transformer based sensor with a low noise amplifier on Eagle CAD. Experimented in collecting EMI traces of different appliances for smart segregation of appliances in households. This work is done under the guidance of Manoj Gulati, PhD student. </p>
             
             </div>
             <div class="resume-date text-md-right">
