--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
          
               <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC</li>  <span class="text-primary">Publication: [arXiv preprint arXiv:1911.09371] </span> </li> 
               <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects</li><span class="text-primary">Patent: [Complete Indian patent filed: 201941043597] </span>  
-              <li>Venom v1.0: Prototype of detecting venom using gold nanoparticles in human blood</li> <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
+              <li>Venom v1.0: Prototype of detecting venom of different species using gold nanoparticles in human blood</li> <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
               <li>AirCheck v1.0: Prototype of air quality monitoring system - PM2.5, 10, CO2</li>
               </ul> 
             
