--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Academic projects</h2>
           <img src="img/MSD_project.png" alt="Paris">
-          <div class="subheading mb-3">Gamma brain waves filter]</div>
+          <div class="subheading mb-3">Gamma brain waves filter</div>
           <div>Design of 4th order switch capacitor based narrow band-pass filter to filter out frequency band of gamma waves (25Hz- 100Hz), which has a Butter-worth response with center frequency at 40Hz on Cadence Virtuoso</div>
           <div>Guide: Dr. Pydi Ganga</div>
           <div> Tools: Cadence - Virtuoso.</div>
