--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
          border: 1px solid #ddd;
          border-radius: 4px;
          padding: 5px;
-         width: 150px;
-         float: left;
+         width: 200px;
+         float: right;
          }
     </style>
   </head>
@@ -112,7 +112,7 @@
               <li>Venom v1.0: Prototype of detecting venom of different species using gold nanoparticles in human blood</li> <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
               <li>AirCheck v1.0: Prototype of air quality monitoring system - PM2.5, 10, CO2</li>
          
-              <img src="img/Gallery.png" alt="Paris"> 
+              <img1 src="img/Gallery.png" alt="Paris"> 
               </ul> 
             
             </div>
