--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <li>Venom v1.0: Prototype of detecting venom of different species using gold nanoparticles in human blood</li> <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
               <li>AirCheck v1.0: Prototype of air quality monitoring system - PM2.5, 10, CO2</li>
          
-              <img src="img/Gallery.png" alt="Paris"> 
+              <img align = "right" src="img/Gallery.png" alt="Paris"> 
               </ul> 
             
             </div>
