--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
               <li>Venom v1.0: Prototype of detecting venom of different species using gold nanoparticles in human blood</li> <!--<a href="" class="text-primary">[Paper in progess]</a></li> -->
               <li>AirCheck v1.0: Prototype of air quality monitoring system - PM2.5, 10, CO2</li>
          
-              <img align = "right"  height="42" width="42" src="img/Gallery.png" alt="Paris"> 
+              <img align = "right"   src="img/Gallery.png" alt="Paris"> 
               </ul> 
             
-            </div>
+            <!-- </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - Present</span>
-            </div>
+            </div> --> 
           </div>
           <hr>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
