--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
               <img align = "right"   src="img/Gallery.png" alt="Paris"> 
               </ul> 
             
-            <!-- </div>
+            </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">October 2018 - Present</span>
-            </div> --> 
+              <!--<span class="text-primary">October 2018 - Present</span>-->
+            </div>
           </div>
           <hr>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
