--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             
             </div>
             <div class="resume-date text-md-right">
-              <!--<span class="text-primary">October 2018 - Present</span>-->
+              <span class="text-primary">October 2018 - Present</span>
             </div>
           </div>
           <hr>
