--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
 
   <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content="Resume portfolio"/>
-    <meta name="author" content="Hemanth Sabbella"/>
-    <meta property="og:image" content="img/hemanth.jpg"/>
+    <meta property="og:site_name" content="Resume - Portfolio | Hemanth Sabbella"/>
+    <meta property="og:image" content="img/hemanth.jpg">
     <title>Hemanth Sabbella</title>
     <link rel="icon" type="image/ico" href="img/logo.png" />
     <!-- Bootstrap core CSS -->
