--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
   <head>
-    <meta property="og:site_name" content="Resume - Portfolio | Hemanth Sabbella"/>
-    <meta property="og:image" content="img/hemanth.jpg">
+    <meta property='og:title' content='Resume - Portfolio | Hemanth Sabbella'/>
+    <meta property='og:image' content='img/hemanth.jpg' />
+    <meta property='og:description' content='Everything related to work, experience and projects I have done so far' />
+    <meta property='og:url' content='http://hemanthsabbella.github.io/' />
+    
     <title>Hemanth Sabbella</title>
     <link rel="icon" type="image/ico" href="img/logo.png" />
     <!-- Bootstrap core CSS -->
