--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
   <head>
+     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property='og:title' content='Resume - Portfolio | Hemanth Sabbella'/>
     <meta property='og:image' content='img/hemanth.jpg' />
     <meta property='og:description' content='Everything related to work, experience and projects I have done so far' />
