--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - Present</span>
+              <img src="img/Gallery.png" alt="Paris">
             </div>
           </div>
           <hr>
