--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - Present</span>
-              <img src="img/Gallery.png"  height ="250" width = "400" alt="Paris">
+              <img1 src="img/Gallery.png"  height ="250" width = "400" alt="Paris">
             </div>
           </div>
           <hr>
