--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
          border: 1px solid #ddd;
          border-radius: 4px;
          padding: 5px;
-         width: 200px;height:350px;
+         width: 200px;
+         height:350px;
          float: right;
          }
     </style>
@@ -121,7 +122,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - Present</span>
               <div class="abc">
-              <img1 src="img/Gallery.png"  height ="250" width = "400" alt="Paris">
+              <img src="img/Gallery.png"  height ="250" width = "400" alt="Paris">
               </div>
             </div>
           </div>
