--- a/index.html
+++ b/index.html
@@ -309,10 +309,10 @@
           <h2 class="mb-5">Special mentions</h2>
           <div>
          <div class="subheading mb-3">Attainments</div>
-          <p>     &#8594 Stand-out applicant and participant, <a  class="text-primary">MIT hacking medicine</a>, Grand Hack - 2019 hosted by University of California, San Francisco <a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/MIT%20Hack.pdf" class="text-primary">[Pitch]</a></p></p>
+       
           <p>     &#8594 Winner, Hackware - 2019, A <a  class="text-primary">Schneider Electric innovation </a>challenge<a href="https://drive.google.com/file/d/1VPYlzrDMEf5rSv1QmmVkrzpElsflEdcP/view?usp=sharing" class="text-primary">[C]</a></p>
           <p>     &#8594 Established Dexter's Lab - an Electronics makerspace in IIITD with Electroholics Admins and mentors</p>
-          
+          <p>     &#8594 NOTE: Stand-out applicant and participant, <a  class="text-primary">MIT hacking medicine</a>, Grand Hack - 2019 hosted by University of California, San Francisco <a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/MIT%20Hack.pdf" class="text-primary">[Pitch]</a></p></p>
           <hr>
           <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD<a href="https://drive.google.com/file/d/1ag1igAIRN9FJmTVa-E7dtve_PfxU5ncm/view?usp=sharing" class="text-primary">[c]</a></div>
           <p>     &#8594 Co-founder and Coordinator, 2015-16</p>
