--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>.
           </div>
           <p>Namaste!</p>
-          <p class="mb-5"> I am Hemanth Sabbella. I graduated from IIIT-Delhi in Electronics and Communications engineering and am currently working as research assistant in Indian Institute of Science(IISc). I work on hardware with specialisation in embedded electronics, digital and analog circuits, and VLSI. Unlike conventional electronics engineers, I code as well. I don't restrict myself to a specific field, but rather I am quite flexible about integrating my expertise into interdisciplinary fields. Apart from the above, I click good pictures, dance, play guitar at times and eat a variety of food. </p>
+          <p class="mb-5"> I am Hemanth Sabbella. I graduated from IIIT-Delhi in Electronics and Communications engineering and am currently working as research assistant in Indian Institute of Science(IISc). I work on hardware with specialisation in embedded electronics, digital and analog circuits, and VLSI. Unlike conventional electronics engineers, I code as well. I don't restrict myself to a specific field, but rather I am quite flexible about integrating my expertise into interdisciplinary fields. Apart from the above, I click good pictures, play guitar at times and eat a variety of food. </p>
           <p class="text-primary" >#embeddedelectronics #embeddedprogramming #hardwaredesign #circuitdesign #PCBdesign #FPGA #3Dprinting #interdisciplinary </p>
           
       
