--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           <hr>
          
           <div class="subheading mb-3">Interests and hobbies</div>
-          <p>    &#8594 Photography, an image got published in <a href="https://www.instagram.com/p/BtlRFouA79c/" class="text-primary">Nat Geo Traveler India</a>) </p>
+          <p>    &#8594 Photography, an image got published in <a href="https://www.instagram.com/p/BtlRFouA79c/" class="text-primary">Nat Geo Traveler India</a> </p>
           <br>
            <h8>*C - certificate, N - newsletter, P - Poster</h8>
 
