--- a/guides/github-pages/index.html
+++ b/guides/github-pages/index.html
@@ -5,11 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="A beginner's guide to creating a personal website and blog using Jekyll and hosting it for free using GitHub Pages.">
-	<meta name="author" content="Jonathan McGlone">
+	<meta name="author" content="Hemanth Sabbella">
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<title>A Guide to Creating and Hosting a Personal Website on GitHub | Jonathan McGlone | Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, Web Noodler.</title>		
+	<title>A Guide to Creating and Hosting a Personal Website on GitHub | Hemanth </title>		
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
