--- a/swatches/index.html
+++ b/swatches/index.html
@@ -5,11 +5,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="Swatches, the personal color log of Jonathan McGlone, a Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, and Web Noodler living and working in Michigan.">
-	<meta name="author" content="Jonathan McGlone">
+	<meta name="author" content="Hemanth Sabbella">
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
-	<title>Swatches | Jonathan McGlone | Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, Web Noodler.</title>		
+	<title>Swatches | Hemanth </title>		
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
