Changed the image extensions

--- a/projects/index.html
+++ b/projects/index.html
@@ -63,7 +63,7 @@
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 1px solid #ccc;
 }
 
 div.gallery img {
@@ -96,14 +96,14 @@ div.desc {
 
 	<div class="gallery">
 	  <a target="_blank" href="https://arxiv.org/pdf/1911.09371.pdf">
-	    <img src="/img/UDR_ADC.png" alt="Northern Lights" width="600" height="400">
+	    <img src="/img/UDR_ADC.PNG" alt="Northern Lights" width="600" height="400">
 	  </a>
 	  <div class="desc">UDR-ADC prototype</div>
 	</div>
 
 	<div class="gallery">
 	  <a target="_blank" href="img_mountains.jpg">
-	    <img src="/img/Venom.jpg" alt="Mountains" width="600" height="400">
+	    <img src="/img/Venom.JPG" alt="Mountains" width="600" height="400">
 	  </a>
 	  <div class="desc">Venom-D</div>
 
@@ -147,14 +147,14 @@ div.desc {
 	</div>
 	<div class="gallery">
 	  <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/LED_driver_board%5Bconstant_current%5D/TPS92638%20-%20Breakout(singlelayer)">
-	    <img src="/img/LED_driver.png" alt="Mountains" width="400" height="400">
+	    <img src="/img/LED_driver.PNG" alt="Mountains" width="400" height="400">
 	  </a>
 	  <div class="desc">Constant Current LED Driver Board</div>
 	  
 	</div>
 	<div class="gallery">
 	  <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">
-	    <img src="/img/IIITDuino.png" alt="Mountains" width="600" height="400">
+	    <img src="/img/IIITDuino.PNG" alt="Mountains" width="600" height="400">
 	  </a>
 	  <div class="desc">IIITDuino</div>
 	  
@@ -207,7 +207,7 @@ div.desc {
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/library.js"></script>
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
 
 	
 	</body>
