--- a/cv/index.html
+++ b/cv/index.html
@@ -43,12 +43,11 @@
 		</a></li>
 		<!-- <li class="passive"><a href="/projects" title="Projects">Projects</a></li> -->
 		<!-- <li class="passive"><a href="/notes" title="Notes">Notes</a></li> -->
-		<li class="passive"><a href="/projects" title="Contact">Projects</a></li>
-		<li class=""><a href="/publications" title="Contact">Publications</a></li>
-		<li class="active"><a href="https://drive.google.com/file/d/1Ltw5l4cqQbDYj4z950hQDgnXZTh2y7NW/view?usp=sharing" title="CV">CV
-
+		<li class="passive"><a href="/projects" title="Projects" style="text-transform: none;">Projects</a></li>
+		<li class=""><a href="/publications" title="Publications" style="text-transform: none;">Publications</a></li>
+		<li class="active"><a href="https://drive.google.com/file/d/1Ltw5l4cqQbDYj4z950hQDgnXZTh2y7NW/view?usp=sharing" title="CV" style="text-transform: none;">CV</a></li>
 	</ul>
-	<h3 class="text-muted"><a href="/">Hemanth Sabbella</a></h3>
+	<h3 class="text-muted" style="text-transform: none;"><a href="/">Hemanth Sabbella</a></h3>
 </div> <!-- /header -->
 
 			
