Image resize, font change

--- a/projects/index.html
+++ b/projects/index.html
@@ -53,27 +53,31 @@
 			
 			<style>
 	div.gallery {
-  margin: 5px;
+  margin: 7px;
   margin-left: 30px;
   border: 0px solid #ccc;
   float: left;
   width: 200px;
   height: 300px;
-}
+
+ }
 
 div.gallery:hover {
-  border: 1px solid #ccc;
+  border: 0.1px outset;
+  border-width:2px;
 }
 
 div.gallery img {
   width: 100%;
   height: auto;
+  border-radius: 3%;
 }
 
 div.desc {
-  padding: 25px;
+  padding: 10px;
   text-align: center;
   color: #428bca;
+
 }
 
 </style>
