--- a/projects/index.html
+++ b/projects/index.html
@@ -91,7 +91,7 @@ div.desc {
 	</div>
 
 	<div class="gallery">
-	  <a target="_blank" href="img_forest.jpg">
+	  <a target="_blank" href="https://github.com/HemanthSabbella/Dhvani">
 	    <img src="/img/Dhvani.jpeg" alt="Forest" width="600" height="400">
 	  </a>
 	  <div class="desc">Dhvani</div>
@@ -105,7 +105,7 @@ div.desc {
 	</div>
 
 	<div class="gallery">
-	  <a target="_blank" href="img_mountains.jpg">
+	  <a target="_blank" href="https://github.com/HemanthSabbella/Venom-D">
 	    <img src="/img/Venom.JPG" alt="Mountains" width="600" height="400">
 	  </a>
 	  <div class="desc">Venom-D</div>
