Updated red ball detection URL

--- a/projects/index.html
+++ b/projects/index.html
@@ -134,7 +134,7 @@ div.desc {
 	</div>
 
 	<div class="gallery">
-	  <a target="_blank" href="img_mountains.jpg">
+	  <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
 	    <img src="/img/Red_ball.png" alt="Mountains" width="600" height="400">
 	  </a>
 	  <div class="desc">Red Ball Detection on Quadcopter</div>
