--- a/projects/index.html
+++ b/projects/index.html
@@ -84,10 +84,10 @@ div.desc {
 <div class="projects">
 
 	<div class="gallery">
-	  <a target="_blank" href="https://gitlab.com/HemanthSabbella/bird_detection_on_edge">
+	  <a target="_blank" href="https://vishnugumme.github.io/">
 	    <img src="/img/bird_detection.jpg" alt="Cinque Terre" width="600" height="400">
 	  </a>
-	  <div class="desc">Bird Detection on Edge</div>
+	  <div class="desc">ULP-ACE</div>
 	</div>
 
 	<div class="gallery">
