Changed a project name

--- a/projects/index.html
+++ b/projects/index.html
@@ -108,7 +108,7 @@ div.desc {
 	  <a target="_blank" href="https://github.com/HemanthSabbella/Venom-D">
 	    <img src="/img/Venom.JPG" alt="Mountains" width="600" height="400">
 	  </a>
-	  <div class="desc">Venom-D</div>
+	  <div class="desc">pointSpectra</div>
 
 	</div>
 
