--- a/projects/index.html
+++ b/projects/index.html
@@ -105,7 +105,7 @@ div.desc {
 	</div>
 
 	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/Venom-D">
+	  <a target="_blank" href="https://hemanthsabbella.github.io/pointSpectra/">
 	    <img src="/img/Venom.JPG" alt="Mountains" width="600" height="400">
 	  </a>
 	  <div class="desc">pointSpectra</div>
