--- a/publications/index.html
+++ b/publications/index.html
@@ -52,12 +52,15 @@
 
 			
 			<div class="publications">
+				<h3>Publications and Patents</h3>
 <ol>
 	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a>(2019)</p></li>
 	
 	<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <a href="--">Patent Application No – 201941043597</a></p></li>
 	
 </ol>
+			<h3>Video poster</h3>	
+				<p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.”<a href="https://www.tinyml.org/event/asia-2021/">tinyML Asia Technical Forum, 2021.</a></p>
 
 </div>
 
