--- a/publications/index.html
+++ b/publications/index.html
@@ -52,14 +52,14 @@
 
 			
 			<div class="publications">
-				<a style="font-size: 21px; color: #428bca;">Publications and Patents</a>
+				<a style="font-size: 21px; color: #428bca;">Publications and Patents</a><br>
 <ol>
 	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a>(2019)</p></li>
 	
 	<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <a href="--">Patent Application No – 201941043597</a></p></li>
 	
 </ol>
-			<a style="font-size: 21px; color: #428bca;">Video poster</a>	
+			<a style="font-size: 21px; color: #428bca;">Video poster</a><br>
 				<p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.”<a href="https://www.tinyml.org/event/asia-2021/">tinyML Asia Technical Forum, 2021.</a></p>
 
 </div>
