--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p>Hi, I'm <span itemprop="name">Hemanth Sabbella.</span> I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> in Electronics and Communications Engineering and am currently working as research assistant at <span itemprop="affiliation">the <a href="https://labs.dese.iisc.ac.in/neuronics/">NeuRonICS Lab</a></span>,  <a href="https://www.iisc.ac.in/">Indian Institute of Science(IISc).</a> </p>
 
-	<p>I work on hardware with specialisation in embedded systems, digital and analog circuits, and VLSI. Unlike conventional electronics engineers, I code as well. I don't restrict myself to a specific field, but rather I am quite flexible about integrating my expertise into interdisciplinary fields. Currently, I am working on tinyML systems incorporating size-constrained ML models into low-power embedded systems.</p>
+	<p>I work on hardware with specialisation in embedded systems, digital and analog circuits, and VLSI. I also like to code. I don't restrict myself to a specific field, but rather I am quite flexible about integrating my expertise into interdisciplinary fields. Currently, I am working on tinyML systems incorporating size-constrained ML models into low-power embedded systems.</p>
 
 	<p> Apart from the above, I click <a href="http://www.natgeotraveller.in/dailyshot/on-the-move/hemanth-sabbella/">good pictures</a>, play guitar at times and eat a variety of food. </p>
 
