--- a/publications/index.html
+++ b/publications/index.html
@@ -55,6 +55,8 @@
 				<a style="font-size: 21px; color: #428bca;">Publications and Patents</a>
 				<hr>
 <ol>
+	<li><p> <b> H.R. Sabbella </b>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, “An Always-On tinyML Acoustic Classifier for Ecological Applications.” - under review at IEEE ISCAS 2022</p></li>
+	
 	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a>(2019)</p></li>
 	
 	<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <a href="--">Patent Application No – 201941043597</a></p></li>
