--- a/publications/index.html
+++ b/publications/index.html
@@ -65,7 +65,7 @@
 				<hr>
 			<a style="font-size: 21px; color: #428bca;">Video poster</a>
 				<hr>
-				<p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.”<a href="https://www.tinyml.org/event/asia-2021/">tinyML Asia Technical Forum, 2021.</a></p>
+				<p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.” accepted at <a href="https://www.tinyml.org/event/asia-2021/"> tinyML Asia Technical Forum, 2021.</a></p>
 
 </div>
 
