--- a/publications/index.html
+++ b/publications/index.html
@@ -65,8 +65,10 @@
 				<hr>
 			<a style="font-size: 21px; color: #428bca;">Video poster</a>
 				<hr>
-				<p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.” accepted at <a href="https://www.tinyml.org/event/asia-2021/"> tinyML Asia Technical Forum, 2021.</a></p>
-
+				
+				<ol>
+				<li><p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.” accepted at <a href="https://www.tinyml.org/event/asia-2021/"> tinyML Asia Technical Forum, 2021.</a></p></li>
+				</ol>
 </div>
 
 			
