--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 	<p>I work on hardware with specialisation in embedded systems, digital and analog circuits, and VLSI. I also like to code. I don't restrict myself to a specific field, but rather I am quite flexible about integrating my expertise into interdisciplinary fields. Currently, I am working on tinyML systems incorporating size-constrained ML models into low-power embedded systems.</p>
 
-	<p> Apart from the above, I click <a href="http://www.natgeotraveller.in/dailyshot/on-the-move/hemanth-sabbella/">good pictures</a>, play guitar at times and eat a variety of food. </p>
+	<p> Apart from the above, I click <a href="https://natgeotraveller.in/dailyshot/on-the-move/hemanth-sabbella/">good pictures</a>, play guitar at times and eat a variety of food. </p>
 
 	<span itemprop="hashtags"> <p style="color:#428bca;">#embeddedelectronics #embeddedprogramming #hardwaredesign #circuitdesign #PCBdesign #FPGA #3Dprinting #interdisciplinary</p> </span>
 	</div>
