--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 	<p> Apart from the above, I click <a href="https://natgeotraveller.in/dailyshot/on-the-move/hemanth-sabbella/">good pictures</a>, play guitar at times and eat a variety of food. </p>
 
-	<span itemprop="hashtags"> <p style="color:#428bca;">#embeddedelectronics #embeddedprogramming #hardwaredesign #circuitdesign #PCBdesign #FPGA #3Dprinting #interdisciplinary</p> </span>
+	<span itemprop="hashtags"> <p style="color:#428bca;">#embeddedelectronics #embeddedprogramming #tinyML #hardwaredesign #circuitdesign #PCBdesign #FPGA #3Dprinting #interdisciplinary</p> </span>
 	</div>
 </div>
 <!-- </div> -->
