--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="Hemanth's website.">
 	<meta name="author" content="Hemanth Sabbella">
+	<meta property="og:image" content="img/hemanth_small.jpg" />
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
