--- a/projects/index.html
+++ b/projects/index.html
@@ -85,10 +85,10 @@ div.desc {
 <div class="projects">
 
 	<div class="gallery">
-	  <a target="_blank" href="http://ulp-ace.github.io/">
+	  <a target="_blank" href="http://u-Bat.github.io/">
 	    <img src="/img/bird_detection.jpg" alt="Cinque Terre" width="600" height="400">
 	  </a>
-	  <div class="desc">ULP-ACE</div>
+	  <div class="desc">u-Bat</div>
 	</div>
 
 	<div class="gallery">
