--- a/projects/index.html
+++ b/projects/index.html
@@ -86,7 +86,7 @@ div.desc {
 
 	<div class="gallery">
 	  <a target="_blank" href="http://u-Bat.github.io/">
-	    <img src="/img/bird_detection.jpg" alt="Cinque Terre" width="600" height="400">
+	    <img src="/img/logo_ubat.png" alt="Cinque Terre" width="600" height="400">
 	  </a>
 	  <div class="desc">u-Bat</div>
 	</div>
