--- a/publications/index.html
+++ b/publications/index.html
@@ -56,9 +56,9 @@
 				<a style="font-size: 21px; color: #428bca;">Publications and Patents</a>
 				<hr>
 <ol>
-	<li><p> <b> H.R. Sabbella </b>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, “An Always-On tinyML Acoustic Classifier for Ecological Applications.” - accepted at IEEE ISCAS 2022</p></li>
+	<li><p> <b> H.R. Sabbella </b>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, “An Always-On tinyML Acoustic Classifier for Ecological Applications.” IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
 	
-	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a>(2019)</p></li>
+	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a> (2019) - Submitted to IEEE Sensors Letters</p></li>
 	
 	<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <a href="--">Patent Application No – 201941043597</a></p></li>
 	
@@ -68,7 +68,7 @@
 				<hr>
 				
 				<ol>
-				<li><p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.” accepted at <a href="https://www.tinyml.org/event/asia-2021/"> tinyML Asia Technical Forum, 2021.</a></p></li>
+				<li><p><b>Hemanth Reddy Sabbella</b> ”Bird Hotspots:  A tinyML acoustic classification system for ecologicalinsights.”  <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg"> tinyML Asia Technical Forum, 2021.</a></p></li>
 				</ol>
 </div>
 
