--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="row marketing">
 	<div class="col-sm-4">
 	<img  class="img-circle avatar" alt="Hemanth Sabbella" src="img/hemanth_small.jpg">
-	<p ><img src="https://img.icons8.com/fluent-systems-regular/50/000000/phone.png" style="width: 25px; height: 25px;"><a style="color:#428bca;">+91-9899494195</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@iisc.ac.in"> hemanthrs@iisc.ac.in</a></p>
+	<p ><img src="https://img.icons8.com/fluent-systems-regular/50/000000/phone.png" style="width: 25px; height: 25px;"><a style="color:#428bca;">+91-9899494195</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@iisc.ac.in"> hemanthrs@iisc.ac.in</a><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
 	<p>Hi, I'm <span itemprop="name">Hemanth Sabbella.</span> I graduated from <span itemprop="affiliation"><a href="https://www.iiitd.ac.in/">IIIT-Delhi</a></span> in Electronics and Communications Engineering and am currently working as research assistant at <span itemprop="affiliation">the <a href="https://labs.dese.iisc.ac.in/neuronics/">NeuRonICS Lab</a></span>,  <a href="https://www.iisc.ac.in/">Indian Institute of Science(IISc).</a> </p>
