--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="Credits and information about the website jmcglone.com, the personal website for Jonathan McGlone, a Librarian, Front-End Developer, Digital Publisher, Project Manager, Music Enthusiast, and Web Noodler living and working in Michigan.">
 	<meta name="author" content="Hemanth Sabbella">
-	<meta property="og:image" content="img/hemanth_small.jpg" />
+	<meta property="og:image" content="img/hemanth_n.jpg" />
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
