--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" width="device-width, initial-scale=1.0">
 	<meta name="description" content="Hemanth's website.">
 	<meta name="author" content="Hemanth Sabbella">
-	<meta property="og:image" content="img/hemanth_n.jpg" />
+	<meta property="og:image" content="img/hemanth_new.jpg" />
 	<!-- favicon
 	<link rel="shortcut icon" href="/img/ico/favicon.png">
 	-->
@@ -55,7 +55,7 @@
 			<!-- <div class="jumbotron"> -->
 <div class="row marketing">
 	<div class="col-sm-4">
-	<img  class="img-circle avatar" alt="Hemanth Sabbella" src="img/hemanth_small.jpg">
+	<img  class="img-circle avatar" alt="Hemanth Sabbella" src="img/hemanth_new.jpg">
 	<p ><img src="https://img.icons8.com/fluent-systems-regular/50/000000/phone.png" style="width: 25px; height: 25px;"><a style="color:#428bca;">+91-9899494195</a></p><p><img src="https://img.icons8.com/windows/32/000000/email-open.png" style="width: 25px; height: 25px"><a href="mailto:hemanthrs@iisc.ac.in"> hemanthrs@iisc.ac.in</a></p><p><img src="https://img.icons8.com/material-rounded/24/000000/google-scholar.png" style="width: 25px; height: 25px"><a href="https://scholar.google.com/citations?user=KPyLReEAAAAJ&hl=en">Google Scholar</a></p>
 	</div>
 	<div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
