--- a/publications/index.html
+++ b/publications/index.html
@@ -58,11 +58,21 @@
 <ol>
 	<li><p> <b> H.R. Sabbella </b>, A.R. Nair, V. Gumme, S.S. Yadav, S. Chakrabartty, C.S. Thakur, “An Always-On tinyML Acoustic Classifier for Ecological Applications.” IEEE International Symposium on Circuits and Systems (ISCAS), 2022</p></li>
 	
-	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a> (2019) - Submitted to IEEE Sensors Letters</p></li>
+	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a> (2019)</p></li>
 	
-	<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <a href="--">Patent Application No – 201941043597</a></p></li>
+	<li><p>S C G Kiruba Daniela, Poojitha S Pai, <b>Hemanth Reddy Sabbella<b>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, “Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
+RNA detection using novelly synthesized gold nanoparticles.” IEEE SENSORS JOURNAL, 2022 </p></li>
+	
 	
 </ol>
+	<hr>
+			<a style="font-size: 21px; color: #428bca;">Patents</a>
+				<hr>
+				
+				<ol>
+				<li><p>S C G Kiruba Daniel, Neeraja,  <b>Hemanth R Sabbella,</b> Chetan Singh Thakur. “Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing agent.” <a href="--">Patent Application No – 201941043597</a></p></li>
+				</ol>
+	
 				<hr>
 			<a style="font-size: 21px; color: #428bca;">Video poster</a>
 				<hr>
