--- a/publications/index.html
+++ b/publications/index.html
@@ -60,7 +60,7 @@
 	
 	<li><p>Krishna, Adithya, Sunil Rudresh, Vishal Shaw, <b>Hemanth Reddy Sabbella,</b> Chandra Sekhar Seela-mantula, and Chetan Singh Thakur.  “Unlimited Dynamic Range Analog-to-Digital Conversion.”<a href="https://arxiv.org/pdf/1911.09371.pdf">arXivpreprint arXiv:1911.09371</a> (2019)</p></li>
 	
-	<li><p>S C G Kiruba Daniela, Poojitha S Pai, <b>Hemanth Reddy Sabbella</b>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, “Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
+	<li><p>S C G Kiruba Daniel, Poojitha S Pai, <b>Hemanth Reddy Sabbella</b>, Kumar Singh, Ambica Rangaiah, Shantala Gowdara Basawarajappa, Chetan Singh Thakur, “Handheld, low-cost, aptamer-based sensing device for rapid SARS-CoV-2
 RNA detection using novelly synthesized gold nanoparticles.” IEEE Sensors Journal, 2022 </p></li>
 	
 	
